# MyImageProcessLibrary

./: CMakeLists.txt  README.md  tarefa.cpp  test_load_save_image.cpp
common/: CMakeLists.txt  common.h  img.cpp  img.h  types.h
decoder/: CMakeLists.txt  decoder.cpp  decoder.h
imgproc/: CMakeLists.txt  README.md  img_proc.cpp  img_proc.h
io/: CMakeLists.txt  io.cpp  io.h
samples/expected_outputs/: imagem_equalizada.pgm  imagem_normalizada.pgm
